--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,11 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 	<groupId>org.springframework</groupId>
 	<artifactId>ppdpapp-api</artifactId>
 	<version>0.1.0</version>
-
+	<packaging>war</packaging>
+	
+	<properties>
+		<start-class>hello.Application</start-class>
+	</properties>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
@@ -14,12 +18,14 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
-	<properties>
-		<start-class>hello.Application</start-class>
-	</properties>
 	
 	<build>
 		<plugins>
