--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,11 @@ nbdist/
 nbactions.xml
 nb-configuration.xml
 
+# Intellij
+.idea/
+*.iml
+*.iws
+
 # Eclipse generated files.
 *.pydevproject
 .metadata
